[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/BaseUiComponents/MenuButton/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/UI/title_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Menu/RegisterForm.gd" type="Script" id=3]
[ext_resource path="res://scenes/Menu/RememberMe.tscn" type="PackedScene" id=4]
[ext_resource path="res://main_theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/ui/fonts/Jost/static/Jost-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/Network/CustomRequest/HTTPRequest.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/BaseUiComponents/BaseLabel/BaseLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/BaseUiComponents/BaseLabel/BaseTitle.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/BaseUiComponents/BaseErrorTag/BaseErrorTag.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.835294, 0.368627, 0.368627, 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 2
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="RegisterForm" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -706.0
margin_top = -773.0
margin_right = 706.0
margin_bottom = 773.0
custom_constants/separation = 30
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="VBoxContainer" parent="."]
margin_right = 1412.0
margin_bottom = 1546.0
custom_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Left"]
margin_right = 1412.0
margin_bottom = 145.0
custom_constants/separation = 30
alignment = 1

[node name="Title" parent="Left/Header" instance=ExtResource( 9 )]
margin_right = 1412.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.9
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )

[node name="Error" parent="Left" instance=ExtResource( 10 )]
visible = false

[node name="Body" type="PanelContainer" parent="Left"]
margin_top = 155.0
margin_right = 1412.0
margin_bottom = 1186.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Left/Body"]
margin_left = 6.0
margin_top = 6.0
margin_right = 1406.0
margin_bottom = 1025.0
rect_min_size = Vector2( 1400, 0 )
theme = ExtResource( 5 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="Parts" type="VBoxContainer" parent="Left/Body/Margin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1368.0
margin_bottom = 987.0
custom_constants/separation = 15

[node name="Fields" type="HBoxContainer" parent="Left/Body/Margin/Parts"]
margin_right = 1336.0
margin_bottom = 330.0
custom_constants/separation = 30

[node name="Labels" type="VBoxContainer" parent="Left/Body/Margin/Parts/Fields"]
margin_right = 454.0
margin_bottom = 330.0
custom_constants/separation = 30

[node name="Label4" parent="Left/Body/Margin/Parts/Fields/Labels" instance=ExtResource( 8 )]
margin_right = 454.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
color = Color( 0.835294, 0.368627, 0.368627, 1 )

[node name="Label5" parent="Left/Body/Margin/Parts/Fields/Labels" instance=ExtResource( 8 )]
margin_top = 118.0
margin_right = 454.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Create password"
color = Color( 0.835294, 0.368627, 0.368627, 1 )

[node name="Label6" parent="Left/Body/Margin/Parts/Fields/Labels" instance=ExtResource( 8 )]
margin_top = 236.0
margin_right = 454.0
margin_bottom = 324.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Repeat password"
color = Color( 0.835294, 0.368627, 0.368627, 1 )

[node name="Boxes" type="VBoxContainer" parent="Left/Body/Margin/Parts/Fields"]
margin_left = 484.0
margin_right = 1336.0
margin_bottom = 330.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="TBUsername" type="LineEdit" parent="Left/Body/Margin/Parts/Fields/Boxes"]
margin_right = 852.0
margin_bottom = 100.0
theme = ExtResource( 5 )
max_length = 16
clear_button_enabled = true
caret_blink_speed = 0.1

[node name="TBPassword" type="LineEdit" parent="Left/Body/Margin/Parts/Fields/Boxes"]
margin_top = 115.0
margin_right = 852.0
margin_bottom = 215.0
theme = ExtResource( 5 )
max_length = 128
secret = true
clear_button_enabled = true

[node name="TBRepeat" type="LineEdit" parent="Left/Body/Margin/Parts/Fields/Boxes"]
margin_top = 230.0
margin_right = 852.0
margin_bottom = 330.0
theme = ExtResource( 5 )
max_length = 128
secret = true
clear_button_enabled = true

[node name="RememberMe" parent="Left/Body/Margin/Parts" instance=ExtResource( 4 )]
margin_top = 345.0
margin_bottom = 433.0

[node name="Separator" type="MarginContainer" parent="Left/Body/Margin/Parts"]
margin_top = 448.0
margin_right = 1336.0
margin_bottom = 468.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 0

[node name="Warnings" type="VBoxContainer" parent="Left/Body/Margin/Parts"]
margin_top = 483.0
margin_right = 1336.0
margin_bottom = 955.0

[node name="Label4" parent="Left/Body/Margin/Parts/Warnings" instance=ExtResource( 8 )]
margin_right = 1336.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Important!"
align = 1
color = Color( 1, 1, 1, 1 )

[node name="Warning1" type="RichTextLabel" parent="Left/Body/Margin/Parts/Warnings"]
margin_top = 104.0
margin_right = 1336.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Password can't be changed or recovered."
scroll_following = true

[node name="Warning2" type="RichTextLabel" parent="Left/Body/Margin/Parts/Warnings"]
margin_top = 168.0
margin_right = 1336.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 120 )
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Password is encrypted, but security is never fully garanteed. Please don't use the same password in multiple places."
scroll_following = true

[node name="Warning3" type="RichTextLabel" parent="Left/Body/Margin/Parts/Warnings"]
margin_top = 292.0
margin_right = 1336.0
margin_bottom = 472.0
rect_min_size = Vector2( 0, 180 )
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "All data recorded is for documenting future updates and saving your progression. No personal data recorded. French & European data protection laws apply."
scroll_following = true

[node name="Warning4" type="RichTextLabel" parent="Left/Body/Margin/Parts/Warnings"]
visible = false
margin_top = 476.0
margin_right = 1336.0
margin_bottom = 716.0
rect_min_size = Vector2( 0, 240 )
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "By pressing \"Continue\" you accept the community guidelines. You also accept that the moderation team reserves the right to restrict or terminate your access to the Zugzwang's online services and community. "
scroll_following = true

[node name="BUContinue" parent="Left" instance=ExtResource( 1 )]
margin_top = 1196.0
margin_right = 1412.0
margin_bottom = 1292.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Continue"

[node name="Right" type="MarginContainer" parent="."]
visible = false
margin_left = 1442.0
margin_right = 2492.0
margin_bottom = 1546.0
rect_min_size = Vector2( 800, 0 )
custom_constants/margin_top = 150
custom_constants/margin_left = 50
custom_constants/margin_bottom = 100

[node name="Body" type="VBoxContainer" parent="Right"]
margin_left = 50.0
margin_top = 150.0
margin_right = 1050.0
margin_bottom = 1446.0
rect_min_size = Vector2( 1000, 0 )
custom_constants/separation = 10

[node name="Label" parent="Right/Body" instance=ExtResource( 9 )]
margin_right = 1000.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Community guidelines"

[node name="ScrollContainer" type="ScrollContainer" parent="Right/Body"]
margin_top = 155.0
margin_right = 1000.0
margin_bottom = 1296.0
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="Parts" type="VBoxContainer" parent="Right/Body/ScrollContainer"]
margin_left = 15.0
margin_top = 5.0
margin_right = 995.0
margin_bottom = 1331.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="Right/Body/ScrollContainer/Parts"]
margin_right = 968.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 240 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "The community guidelines aim to protect everyone using Zugzwang's online services and interacting with its community.
Please report rules-breaking behaviors."

[node name="Label4" parent="Right/Body/ScrollContainer/Parts" instance=ExtResource( 8 )]
margin_top = 250.0
margin_right = 968.0
margin_bottom = 338.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Main rules"
align = 1
color = Color( 0.835294, 0.368627, 0.368627, 1 )

[node name="RichTextLabel3" type="RichTextLabel" parent="Right/Body/ScrollContainer/Parts"]
margin_top = 348.0
margin_right = 968.0
margin_bottom = 528.0
rect_min_size = Vector2( 0, 180 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Harassment, intimidation and overall rudeness are strictly prohibited when talking with or about another member of the community."

[node name="RichTextLabel5" type="RichTextLabel" parent="Right/Body/ScrollContainer/Parts"]
margin_top = 538.0
margin_right = 968.0
margin_bottom = 658.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "In-game chat is not a place for debating politics and religion."

[node name="Label5" parent="Right/Body/ScrollContainer/Parts" instance=ExtResource( 8 )]
margin_top = 668.0
margin_right = 968.0
margin_bottom = 756.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Fair-play"
align = 1
color = Color( 0.835294, 0.368627, 0.368627, 1 )

[node name="RichTextLabel2" type="RichTextLabel" parent="Right/Body/ScrollContainer/Parts"]
margin_top = 766.0
margin_right = 968.0
margin_bottom = 946.0
rect_min_size = Vector2( 0, 180 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Cheating during online matches by using third-party software that modifies the behavior of the Zugzwang client is prohibited."

[node name="RichTextLabel4" type="RichTextLabel" parent="Right/Body/ScrollContainer/Parts"]
margin_top = 956.0
margin_right = 968.0
margin_bottom = 1196.0
rect_min_size = Vector2( 0, 240 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "\"Stream-sniping\", \"smurfing\", \"boosting\", along with any other attempt at cheating the progression and the ranking system, are prohibited, and will result in a ban."

[node name="RichTextLabel6" type="RichTextLabel" parent="Right/Body/ScrollContainer/Parts"]
margin_top = 1206.0
margin_right = 968.0
margin_bottom = 1326.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Experienced players are encouraged to help beginners learning the game."

[node name="Requests" type="Node" parent="."]

[node name="CreateAccountRequest" parent="Requests" instance=ExtResource( 7 )]
type = "POST"
route = "/api/v1.0/players"
[connection signal="pressed" from="Left/BUContinue" to="." method="_on_BUContinue_pressed"]
[connection signal="request_completed" from="Requests/CreateAccountRequest" to="." method="_on_CreateAccountRequest_request_completed"]
